--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -34,18 +34,22 @@ justify-content: center;
   }
   
   #navbar ul li a {
+    font-size: 1.5rem;
     color: #000;
     text-decoration: none;
     padding: 0.75rem 1.5rem;
     color: #0000;
     font-weight: bold;
-    background: linear-gradient(90deg,#6B5DF2 50%,#000 0)  var(--_p,100%)/200% no-repeat;
+    background: linear-gradient(90deg,#f7cc53 50%,#000 0)  var(--_p,100%)/200% no-repeat;
     -webkit-background-clip: text;
     background-clip: text;
     transition: 1s;
   }
   #navbar ul li a:hover {
     --_p: 0%;
+  }
+  .logo{
+    font-size: 2rem;
   }
   .logo >span{
     color: #f7cc53;
