--- a/src/components/PostJob/index.css
+++ b/src/components/PostJob/index.css
@@ -95,7 +95,7 @@ form {
   display: block;
   width: 100%;
   padding: 0.75rem;
-  background: Green;
+  background: rgb(11, 11, 11);
   color: White;
   border-radius: 2px;
   cursor: pointer;
